<resources>
    <string name="splash_app_name">iTAP</string>
    <string name="splash_app_desc">Watch. Tap . Play. Win.</string>
    <string name="label_login">Login</string>
    <string name="label_logout">Logout</string>
    <string name="label_login_with_facebook">Login with Facebook</string>
    <string name="label_login_with_google">Login with Google</string>
    <string name="label_or">OR</string>
    <string name="label_mobile_number">Mobile Number</string>
    <string name="label_6_digit_otp">Verify OTP</string>
    <string name="label_lets_go">Lets Go</string>
    <string name="label_terms_n_policy">Terms &amp; Policy></string>
    <string name="label_confirm_terms_n_policy">Please confirm that you accept the Terms of Use and Privacy Policy</string>
    <string name="error_msg_enter_mobile_no">Please enter your mobile number</string>
    <string name="label_error">Error</string>
    <string name="label_alert">Alert</string>
    <string name="label_app_update">Update App</string>
    <string name="label_come_later">Come Later</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="facebook_app_id">1970355783182108</string>
    <string name="fb_login_protocol_scheme">fb1970355783182108</string>
    <string name="server_client_id">4679721214-7pmv5jfbe0pf70qve7mt885ul79m75ek.apps.googleusercontent.com</string>
    <string name="label_lang_pref_title_line1">We have entertaining content in many languages</string>
    <string name="label_lang_pref_title_line2">Pick all you want</string>
    <string name="label_tick_answers">Please tick your answers below</string>
    <string name="label_done">Done</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="label_welcome_to_itap">Welcome to iTap</string>
    <string name="label_coins_in_wallet">You now have 50 coins in your wallet.</string>
    <string name="label_referral_coins">Referral Bonus!</string>
    <string name="label_got_it">Got It</string>
    <string name="label_learn_more">Learn More</string>
    <string name="label_home">Home</string>
    <string name="label_channels">Channels</string>
    <string name="label_search">Search</string>
    <string name="label_upload">Upload</string>
    <string name="label_profile">Profile</string>
    <string name="label_notification">Notification</string>
    <string name="label_live">Live</string>
    <string name="label_coins">Coins</string>
    <string name="label_listen">Listen</string>
    <string name="label_watch">Watch</string>
    <string name="label_read">Read</string>
    <string name="label_play">Play</string>
    <string name="label_free">Free</string>
    <string name="label_rent">Rent</string>
    <string name="label_premium">Premium</string>
    <string name="label_games">Games</string>
    <string name="label_buy">Buy</string>
    <string name="label_watch_tap_play_win">Watch. Tap. Play. Win.</string>
    <string name="label_purchases">Purchases</string>
    <string name="label_language_setting">Language Settings</string>
    <string name="label_avatar">iTap Avatar</string>
    <string name="label_voucher">Vouchers</string>
    <string name="label_offers">Offers</string>
    <string name="label_rewards">Rewards</string>
    <string name="label_more">More</string>
    <string name="label_now_playing">Now Playing</string>
    <string name="label_subscribe">SUBSCRIBE</string>
    <string name="label_share_now">SHARE NOW</string>
    <string name="live_game">Live Game</string>
    <string name="label_trivira">Trivia</string>
    <string name="label_submit">Submit</string>
    <string name="label_continue">Continue</string>
    <string name="earn_coins">EARN COINS</string>
    <string name="label_itapcoin">iTAP</string>
    <string name="label_itapdesc">WATCH - TAP - PLAY - WIN.</string>
    <string name="label_earn_coin">EARN COINS</string>
    <string name="label_spend_coin">SPEND COINS</string>
    <string name="label_mycoupon">My Coupons</string>
    <string name="label_allcoupon">All Coupons</string>
    <string name="label_episode">EPISODES</string>
    <string name="label_similar">Similar like this</string>
    <string name="no_action">NO_ACTION</string>
    <string name="learn_more_description">    • Download iTAP from the Play Store on your Android mobile phone and win 100 iCoins.
    • Watch your favourite comedy skits, drama  web series, tv shows, mythological series.
    • Answer simple questions related to the content and win iCoins.
    • Buy premium content and get 50 iCoins with every film you buy for just Rs.10/-.
    • Play exclusive games like SnapWin, Pool Prize  Spin the Wheel and win iCoins through lucky draw.
    • Play engaging trivia games pertaining to Bollywood, Cricket  Kabaddi and win iCoins.
    • Use your iCoins to buy discount vouchers.
    • Win cash everyday - For every 1000 iCoins you stand a chance to get real cash of Rs. 30/- in your account.</string>
    <string-array name="arra_home_tabs">
        <item>@string/label_free</item>
        <item>@string/label_play</item>
        <item>@string/label_rent</item>
        
    </string-array>
    <string-array name="array_rewards_tabs">
        <item>@string/label_redeem</item>
        <item>@string/label_earn</item>
        <item>@string/label_wallet</item>
    </string-array>
    <string-array name="array_redeem_tabs">
        <item>@string/label_shop</item>
        <item>@string/label_coupons</item>
        <item>@string/label_vouchers</item>
        <item>@string/label_win_cash</item>
    </string-array>
    <string-array name="array_wallet_tabs_id">
        <item>@string/leaderboard_id</item>
        <item>@string/earn_history_id</item>
        <item>@string/redeem_history_id</item>
    </string-array>
    <string-array name="array_wallet_tabs">
        <item>@string/leaderboard</item>
        <item>@string/earn_history</item>
        <item>@string/redeem_history</item>
    </string-array>
    <string-array name="array_diamonds_tabs">
        <item>@string/buy_diamonds</item>
        <item>@string/wallet</item>
        <item>@string/label_redeem</item>
    </string-array>
    <string-array name="arra_play_tabs">
        <item>@string/live_game</item>
        <item>@string/label_trivira</item>
    </string-array>
    <string-array name="arra_learn_more_tabs">
        <item>@string/label_earn_coin</item>
        <item>@string/label_spend_coin</item>
    </string-array>
    <string-array name="arra_coupons_tabs">
        <item>@string/label_allcoupon</item>
        <item>@string/label_mycoupon</item>

    </string-array>
    <string-array name="arra_series_tabs">
        <item>@string/label_episode</item>
        <item>@string/label_similar</item>
    </string-array>
    <string-array name="arra_more_menu_id">
        <item>@string/id_premium</item>
        <item>@string/id_purchases</item>
        <item>123</item>
        <item>@string/id_my_watchlist</item>
        <item>@string/id_downloads</item>
        <item>@string/id_redeem_coupon</item>
        <item>@string/id_refer_earn</item>
        <item>@string/id_contact_us</item>
        <item>@string/id_terms_of_uses</item>
        <item>@string/id_privacy_policy</item>
        <item>@string/id_refund_cancellation</item>
        <item>@string/id_about</item>
        <item>@string/id_logout</item>
    </string-array>
    <string-array name="arra_more_menu_name">
        <item>@string/label_manage_subscriptions</item>
        <item>@string/label_purchases</item>
        <item>@string/label_language_setting</item>
        <item>@string/label_my_watchlist</item>
        
        
        <item>@string/label_downloads</item>
        <item>@string/label_redeem_coupon</item>
        <item>@string/label_refer_earn</item>
        <item>@string/label_contact_us</item>
        <item>@string/label_terms_of_uses</item>
        <item>@string/label_privacy_policy</item>
        <item>@string/label_refund_cancellation</item>
        <item>@string/label_about</item>
        <item>@string/label_logout</item>
    </string-array>
    <string-array name="arra_more_menu_icon">
        <item>@drawable/ic_white_premium</item>
        <item>@drawable/ic_purchases</item>
        <item>@drawable/ic_languages</item>
        <item>@drawable/ic_watchlist</item>
        
        
        <item>@drawable/ic_download</item>
        <item>@drawable/ic_gift</item>
        <item>@drawable/ic_redeem</item>
        <item>@drawable/ic_contact</item>
        <item>@drawable/ic_terms</item>
        <item>@drawable/ic_privacy</item>
        <item>@drawable/ic_refund_cancellation</item>
        <item>@drawable/ic_about</item>
        <item>@drawable/ic_logout</item>
    </string-array>
    <string-array name="arra_languages">
        <item>English (en)</item>
        <item>हिंदी (hi)</item>
        <item>मराठी (mr)</item>
    </string-array>
    <string-array name="arra_id_languages">
        <item>en</item>
        <item>hi</item>
        <item>mr</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_tilt_watch">Tilt &amp; Watch</string>
    <string name="label_view_all">View all</string>
    <string name="label_view_more">View More</string>
    <string name="play_win_10_coins">Play &amp; Win - 10 Coins</string>
    <string name="label_quick_trivia">Quick Trivia</string>
    <string name="earn_coin_quest">How do I earn coins?</string>
    <string name="spean_coin_quest">How do I Spend coins?</string>
    <string name="ques_qnswer">Lorem ipsum dolor sit amet, consectetur adipiscing elit.\n\nsed do eiusmod tempor incididunt ut labore et dolore magna aliqua. \n\nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. \n\nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.\n\nExcepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="label_tap_here_to_listen"><u>Tap here to listen</u></string>
    <string name="label_earn_you_register">Register and get</string>
    <string name="label_earn_100_coins_when_you_register">100 iCoins</string>
    <string name="label_iCoins">iCoins</string>
    <string name="exit">EXIT</string>
    <string name="label_redeem">Redeem</string>
    <string name="label_earn">Earn</string>
    <string name="label_shop">Shop</string>
    <string name="label_cancel">Cancel</string>
    <string name="wallet">Wallet</string>
    <string name="yes">Yes</string>
    <string name="label_remind_me">Remind Me</string>
    <string name="label_ask_a_question">Ask a question</string>
    <string name="label_15_min">15 mins before</string>
    <string name="label_30_min">30 mins before</string>
    <string name="label_1_hr">1 hour before</string>
    <string name="label_redeem_coupon">Redeem Voucher</string>
    <string name="label_redeem_your_voucher">Redeem your Voucher</string>
    <string name="label_enter_voucher">Enter the Voucher code</string>
    <string name="recovering_connection">Recovering\nConnection</string>
    <string name="opponent_s_connection_is_weak">Opponent\'s connection\nis weak</string>
    <string name="send">Send</string>
    <string name="maxword">Max 200 words</string>
    <string name="ask_question_hint">Write your question here..</string>
    <string name="close_dialog_title">Close Session?</string>
    <string name="close_dialog_description">Are you sure to close this session?</string>
    <string name="we_re_so_delighted_you_re_here">We\'re so delighted you\'re here!</string>
    <string name="create">Create</string>
</resources>