<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/tab_grey"
    android:padding="@dimen/dp_10">

    <TextView
        android:id="@+id/textView2"
        style="@style/TitleSemiBoldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/label_remind_me"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvtitle"
        style="@style/Body_2_MediumStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="start"
        android:text=""
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@+id/tvtitle">

        <RadioButton
            android:id="@+id/rb_15min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_15_min"
            android:textColor="@drawable/text_selector_white_asset"
            android:button="@null"
            android:checked="true"
            android:drawableRight="@drawable/check_selector_tab_gray"/>

        <RadioButton
            android:id="@+id/rb_30min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_30_min"
            android:button="@null"
            android:textColor="@drawable/text_selector_white_asset"
            android:drawableRight="@drawable/check_selector_tab_gray"
            />

        <RadioButton
            android:id="@+id/rb_60min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_1_hr"
            android:button="@null"
            android:textColor="@drawable/text_selector_white_asset"
            android:drawableRight="@drawable/check_selector_tab_gray"/>
    </RadioGroup>


    <Button
        android:id="@+id/btcancel"
        style="@style/TitleSemiBoldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/tab_grey"
        android:text="@string/label_cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/btsend"
        app:layout_constraintEnd_toStartOf="@+id/btsend"
        app:layout_constraintTop_toBottomOf="@+id/rg"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btsend"
        style="@style/TitleSemiBoldStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/tab_grey"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/rg" />


</androidx.constraintlayout.widget.ConstraintLayout>