<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.VouchersFrag"
    android:background="@color/back_black">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                style="@style/HeaderSemiBoldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/label_redeem_your_voucher"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/textView14"
                style="@style/HeaderSemiBoldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/we_re_so_delighted_you_re_here"
                android:textColor="@color/colorWhite"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_voucher" />

            <TextView
                android:id="@+id/textView12"
                style="@style/Subtitle_1_MediumStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/label_enter_voucher"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/etRedeemCode"
                style="@style/Subtitle_1_MediumStyle"
                android:layout_width="300dp"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_text_view"
                android:gravity="center"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/dp_8"
                android:textColor="@color/light_blue" />

            <Button
                android:id="@+id/btnRedeemNowBtn"
                style="@style/HeaderSemiBoldStyle"
                android:layout_width="300dp"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border_button"
                android:onClick="redeemCouponClick"
                android:text="@string/label_redeem_coupon"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>